# jeeves

./: jeeves.code-workspace
actor/: .gitignore  Cargo.toml  jeeves_actor.service  main.py
actor/scripts/: apps  codenames  dancing-anki  jeeves
actor/src/: main.rs
listener/: Dockerfile  hooks.json  listener.py  plumber.sh
